# openclaw-deployer

./: .gitignore  README.md  build.sh  index.html  package.json  vite.config.ts  上传到GitHub.command  上传到GitHub教程.md  安装并启动  构建命令
.github/workflows/: build.yml
src/: App.tsx  index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/assets/: index-D78yUudK.js  index-DyvGLDu1.css
src/components/: DeployWizard.tsx  SystemCheck.tsx
src/deploy-scripts/: deploy.sh
src/templates/: .env.example  docker-compose.yml  openclaw.openai-chat.json
